// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GiftCardList Component should render correctly 1`] = `
<div
  className="abc"
>
  <Styled(Heading)
    className="cardList__heading"
    color="text.primary"
    component={null}
    dataLocator="payment-gcAndMerchandiseCards"
    textAlign="left"
    variant="h6"
  />
  <Styled(EmptyCard)
    alt="gift card icon"
    icon="gift-card"
    labels={
      Object {
        "common": Object {},
        "giftCardHeading": "heading",
        "paymentGC": Object {},
      }
    }
    prefix="GC"
  />
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 4,
          "medium": 4,
          "small": 6,
        }
      }
    >
      <Styled(Button)
        buttonVariation="fixed-width"
        className="cardList__ccAddCta"
        dataLocator="payment-addagiftcard"
        fill="BLUE"
        onClick={[Function]}
      />
    </Styled(Col)>
  </Styled(Row)>
</div>
`;

exports[`GiftCardList Component should render correctly if list is present 1`] = `
<div
  className="abc"
>
  <Styled(Heading)
    className="cardList__heading"
    color="text.primary"
    component={null}
    dataLocator="payment-gcAndMerchandiseCards"
    textAlign="left"
    variant="h6"
  />
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 4,
          "medium": 4,
          "small": 6,
        }
      }
    >
      <Styled(Button)
        buttonVariation="fixed-width"
        className="cardList__ccAddCta"
        dataLocator="payment-addagiftcard"
        fill="BLUE"
        onClick={[Function]}
      />
    </Styled(Col)>
  </Styled(Row)>
  <CardView
    cardList={
      Immutable.List [
        Object {
          "accountNo": "************1111",
          "addressDetails": Object {
            "addressLine1": "111 3rd Ave",
            "addressLine2": "",
            "city": "New York",
            "country": "US",
            "firstName": "new",
            "lastName": "address",
            "phone1": "9878909876",
            "state": "NY",
            "zipCode": "10003",
          },
          "billingAddressId": 160685,
          "ccBrand": "Visa",
          "ccType": "COMPASSVISA",
          "creditCardId": 73501,
          "defaultInd": false,
          "expMonth": "5 ",
          "expYear": "2024",
          "nameOnAccount": ".",
          "properties": null,
        },
      ]
    }
    labels={
      Object {
        "common": Object {},
        "giftCardHeading": "heading",
        "paymentGC": Object {},
      }
    }
  />
</div>
`;
